dodalem pause, score, timer, i duzo roznych rzeczy